--- a/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
+++ b/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,12 @@ encoding//Release/Image_Sensor/Source/subdir_rules.mk=UTF-8
 encoding//Release/Image_Sensor/Source/subdir_vars.mk=UTF-8
 encoding//Release/Network/Source/subdir_rules.mk=UTF-8
 encoding//Release/Network/Source/subdir_vars.mk=UTF-8
+encoding//Release/Parse_Library/common/subdir_rules.mk=UTF-8
+encoding//Release/Parse_Library/common/subdir_vars.mk=UTF-8
+encoding//Release/Parse_Library/common/tests/subdir_rules.mk=UTF-8
+encoding//Release/Parse_Library/common/tests/subdir_vars.mk=UTF-8
+encoding//Release/Parse_Library/subdir_rules.mk=UTF-8
+encoding//Release/Parse_Library/subdir_vars.mk=UTF-8
 encoding//Release/Peripheral_Drivers/Source/subdir_rules.mk=UTF-8
 encoding//Release/Peripheral_Drivers/Source/subdir_vars.mk=UTF-8
 encoding//Release/Power/Source/subdir_rules.mk=UTF-8
