--- a/Proto1/Project/ULP_SEC_CAM/.cproject
+++ b/Proto1/Project/ULP_SEC_CAM/.cproject
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<?fileVersion 4.0.0?>
-
-<cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
+<?fileVersion 4.0.0?><cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage">
 	<storageModule configRelations="2" moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="com.ti.ccstudio.buildDefinitions.TMS470.Debug.1908027724">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="com.ti.ccstudio.buildDefinitions.TMS470.Debug.1908027724" moduleId="org.eclipse.cdt.core.settings" name="Release">
@@ -10,10 +8,10 @@
 				</macros>
 				<externalSettings/>
 				<extensions>
-					<extension id="com.ti.ccstudio.binaryparser.CoffParser" point="org.eclipse.cdt.core.BinaryParser"/>
 					<extension id="com.ti.ccstudio.errorparser.CoffErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="com.ti.ccstudio.errorparser.LinkErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="com.ti.ccstudio.errorparser.AsmErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
+					<extension id="com.ti.ccstudio.binaryparser.CoffParser" point="org.eclipse.cdt.core.BinaryParser"/>
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
@@ -111,7 +109,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="rough_file.c|experiment_orDbg_codes.c|Parse_Library/common/tests/simplejson_tests.cc|main1.c|network_if.c|demo1_collectAndTxitSensorData.c|customer_demo1_collectAndTxitSensorData.c|Sensors/Source/fxos8700-112.c|get_weather.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="FXOS8700 Frescale Lib/main.c|FXOS8700 Frescale Lib/Events.c|FXOS8700 Frescale Lib/user_tasks.c|FXOS8700 Frescale Lib/mqx_tasks.c|rough_file.c|experiment_orDbg_codes.c|Parse_Library/common/tests/simplejson_tests.cc|main1.c|network_if.c|demo1_collectAndTxitSensorData.c|customer_demo1_collectAndTxitSensorData.c|Sensors/Source/fxos8700-112.c|get_weather.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
