--- a/Proto1/Project/ULP_SEC_CAM/.cproject
+++ b/Proto1/Project/ULP_SEC_CAM/.cproject
@@ -4,6 +4,7 @@
 		<cconfiguration id="com.ti.ccstudio.buildDefinitions.TMS470.Debug.1908027724">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="com.ti.ccstudio.buildDefinitions.TMS470.Debug.1908027724" moduleId="org.eclipse.cdt.core.settings" name="Release">
 				<macros>
+					<stringMacro name="ORIGINAL_PROJECT_ROOT" type="VALUE_PATH_ANY" value="C:/ti/CC3200SDK_1.1.0/cc3200-sdk/example/get_weather/ccs"/>
 					<stringMacro name="PARSE_SDK_ROOT" type="VALUE_PATH_ANY" value="${PROJECT_LOC}/../Parse"/>
 				</macros>
 				<externalSettings/>
