Putting Image sensor in standby after image capture
Plus, rearrangement of files.
Note: Time taken for writing MT9D111 variables to start image capture
after standby is about 3 seconds. This should be reduced.
Also, some images captured after standby exit are skewed

--- a/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
+++ b/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
@@ -19,6 +19,10 @@ encoding//Release/Power/Source/subdir_rules.mk=UTF-8
 encoding//Release/Power/Source/subdir_vars.mk=UTF-8
 encoding//Release/Sensors/Source/subdir_rules.mk=UTF-8
 encoding//Release/Sensors/Source/subdir_vars.mk=UTF-8
+encoding//Release/Test_Debug/Source/subdir_rules.mk=UTF-8
+encoding//Release/Test_Debug/Source/subdir_vars.mk=UTF-8
+encoding//Release/Test_Debug/subdir_rules.mk=UTF-8
+encoding//Release/Test_Debug/subdir_vars.mk=UTF-8
 encoding//Release/makefile=UTF-8
 encoding//Release/objects.mk=UTF-8
 encoding//Release/sources.mk=UTF-8
