--- a/Proto1/Project/ULP_SEC_CAM/.cproject
+++ b/Proto1/Project/ULP_SEC_CAM/.cproject
@@ -58,6 +58,7 @@
 									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}/Network/Include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}/Power/Include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}/Peripheral_Drivers/Include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}/Test_Debug/Include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${PROJECT_LOC}/Application/Include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${CC3200_SDK_ROOT}/example/common&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${CC3200_SDK_ROOT}/driverlib&quot;"/>
@@ -135,7 +136,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="main_getweather.c|algorithm.c|algorithm2.c|algorithm_1.c|test_modules.c|Sensors/Source/test_fns.c|appfile_magnmtr_old_logic.c|FXOS8700 Frescale Lib/tasks_backup_8May.c|FXOS8700 Frescale Lib/tasks_backup.c|FXOS8700 Frescale Lib/fns_to_be_called_from_mainTask.c|FXOS8700 Frescale Lib/main.c|FXOS8700 Frescale Lib/Events.c|FXOS8700 Frescale Lib/user_tasks.c|FXOS8700 Frescale Lib/mqx_tasks.c|rough_file.c|experiment_orDbg_codes.c|Parse_Library/common/tests/simplejson_tests.cc|main1.c|network_if.c|demo1_collectAndTxitSensorData.c|customer_demo1_collectAndTxitSensorData.c|Sensors/Source/fxos8700-112.c|get_weather.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="Application/Source/algorithm_1.c|Test_Debug/Source/test_modules.c|Test_Debug/Source/rough_file.c|Test_Debug/Source/experiment_orDbg_codes.c|Application/Source/appfile_magnmtr_old_logic.c|Application/Source/algorithm2.c|Application/Source/algorithm.c|Test_Task.c|main_getweather.c|algorithm.c|algorithm2.c|algorithm_1.c|test_modules.c|Sensors/Source/test_fns.c|appfile_magnmtr_old_logic.c|FXOS8700 Frescale Lib/tasks_backup_8May.c|FXOS8700 Frescale Lib/tasks_backup.c|FXOS8700 Frescale Lib/fns_to_be_called_from_mainTask.c|FXOS8700 Frescale Lib/main.c|FXOS8700 Frescale Lib/Events.c|FXOS8700 Frescale Lib/user_tasks.c|FXOS8700 Frescale Lib/mqx_tasks.c|rough_file.c|experiment_orDbg_codes.c|Parse_Library/common/tests/simplejson_tests.cc|main1.c|network_if.c|demo1_collectAndTxitSensorData.c|customer_demo1_collectAndTxitSensorData.c|Sensors/Source/fxos8700-112.c|get_weather.cmd" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
