--- a/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
+++ b/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
@@ -7,6 +7,8 @@ encoding//Release/FXOS8700\ Frescale\ Lib/subdir_rules.mk=UTF-8
 encoding//Release/FXOS8700\ Frescale\ Lib/subdir_vars.mk=UTF-8
 encoding//Release/Image_Sensor/Source/subdir_rules.mk=UTF-8
 encoding//Release/Image_Sensor/Source/subdir_vars.mk=UTF-8
+encoding//Release/Lib/subdir_rules.mk=UTF-8
+encoding//Release/Lib/subdir_vars.mk=UTF-8
 encoding//Release/Network/Source/subdir_rules.mk=UTF-8
 encoding//Release/Network/Source/subdir_vars.mk=UTF-8
 encoding//Release/Parse_Library/common/subdir_rules.mk=UTF-8
