User indications with LED. Firmware version in Parse UserConfigs Object
If an older version of firmware has been used till now, enter the User
WiFi through Mobile App as the first thing after loading the code. The
WiFi credentials are offset in the flash file, so this has to be done.

--- a/Proto1/Project/ULP_SEC_CAM/.project
+++ b/Proto1/Project/ULP_SEC_CAM/.project
@@ -3,6 +3,7 @@
 	<name>ULP_SEC_CAM</name>
 	<comment></comment>
 	<projects>
+		<project>driverlib</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
