BugFix : Collect angle gives wrong angle
Image sensor configs changed
Feature: Button press just before hibernate will reset the device.
Remove i* from request.c

--- a/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
+++ b/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,31 @@
 eclipse.preferences.version=1
+encoding//Debug/Application/Source/subdir_rules.mk=UTF-8
+encoding//Debug/Application/Source/subdir_vars.mk=UTF-8
+encoding//Debug/FXOS8700\ Frescale\ Lib/subdir_rules.mk=UTF-8
+encoding//Debug/FXOS8700\ Frescale\ Lib/subdir_vars.mk=UTF-8
+encoding//Debug/Image_Sensor/Source/subdir_rules.mk=UTF-8
+encoding//Debug/Image_Sensor/Source/subdir_vars.mk=UTF-8
+encoding//Debug/Lib/subdir_rules.mk=UTF-8
+encoding//Debug/Lib/subdir_vars.mk=UTF-8
+encoding//Debug/Network/Source/subdir_rules.mk=UTF-8
+encoding//Debug/Network/Source/subdir_vars.mk=UTF-8
+encoding//Debug/Parse_Library/common/subdir_rules.mk=UTF-8
+encoding//Debug/Parse_Library/common/subdir_vars.mk=UTF-8
+encoding//Debug/Parse_Library/subdir_rules.mk=UTF-8
+encoding//Debug/Parse_Library/subdir_vars.mk=UTF-8
+encoding//Debug/Peripheral_Drivers/Source/subdir_rules.mk=UTF-8
+encoding//Debug/Peripheral_Drivers/Source/subdir_vars.mk=UTF-8
+encoding//Debug/Power/Source/subdir_rules.mk=UTF-8
+encoding//Debug/Power/Source/subdir_vars.mk=UTF-8
+encoding//Debug/Sensors/Source/subdir_rules.mk=UTF-8
+encoding//Debug/Sensors/Source/subdir_vars.mk=UTF-8
+encoding//Debug/Test_Debug/Source/subdir_rules.mk=UTF-8
+encoding//Debug/Test_Debug/Source/subdir_vars.mk=UTF-8
+encoding//Debug/makefile=UTF-8
+encoding//Debug/objects.mk=UTF-8
+encoding//Debug/sources.mk=UTF-8
+encoding//Debug/subdir_rules.mk=UTF-8
+encoding//Debug/subdir_vars.mk=UTF-8
 encoding//Release/Application/Source/subdir_rules.mk=UTF-8
 encoding//Release/Application/Source/subdir_vars.mk=UTF-8
 encoding//Release/FXOS8700\ Freescale\ Lib/subdir_rules.mk=UTF-8
