--- a/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
+++ b/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
@@ -54,6 +54,8 @@ encoding//Release/Test_Debug/Source/subdir_rules.mk=UTF-8
 encoding//Release/Test_Debug/Source/subdir_vars.mk=UTF-8
 encoding//Release/Test_Debug/subdir_rules.mk=UTF-8
 encoding//Release/Test_Debug/subdir_vars.mk=UTF-8
+encoding//Release/lib/subdir_rules.mk=UTF-8
+encoding//Release/lib/subdir_vars.mk=UTF-8
 encoding//Release/makefile=UTF-8
 encoding//Release/objects.mk=UTF-8
 encoding//Release/sources.mk=UTF-8
