--- a/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
+++ b/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.core.resources.prefs
@@ -21,6 +21,8 @@ encoding//Debug/Sensors/Source/subdir_rules.mk=UTF-8
 encoding//Debug/Sensors/Source/subdir_vars.mk=UTF-8
 encoding//Debug/Test_Debug/Source/subdir_rules.mk=UTF-8
 encoding//Debug/Test_Debug/Source/subdir_vars.mk=UTF-8
+encoding//Debug/lib/subdir_rules.mk=UTF-8
+encoding//Debug/lib/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
