--- a/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.cdt.core.prefs
+++ b/Proto1/Project/ULP_SEC_CAM/.settings/org.eclipse.cdt.core.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+environment/project/com.ti.ccstudio.buildDefinitions.TMS470.Debug.1908027724.358903068/append=true
+environment/project/com.ti.ccstudio.buildDefinitions.TMS470.Debug.1908027724.358903068/appendContributed=true
 environment/project/com.ti.ccstudio.buildDefinitions.TMS470.Debug.1908027724/append=true
 environment/project/com.ti.ccstudio.buildDefinitions.TMS470.Debug.1908027724/appendContributed=true
