--- a/Proto1/Project/ULP_SEC_CAM/.cproject
+++ b/Proto1/Project/ULP_SEC_CAM/.cproject
@@ -264,7 +264,7 @@
 									<listOptionValue builtIn="false" value="&quot;${CC3200_SDK_ROOT}/example/common&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${CC3200_SDK_ROOT}/middleware/ccs/Release&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${CG_TOOL_ROOT}/include&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${CC3200_SDK_ROOT}/driverlib/ccs/Release&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;D:\Projects\Vcognition\GIT Clone\ws\driverlib\Release&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${CC3200_SDK_ROOT}/oslib/ccs/free_rtos&quot;"/>
 								</option>
 								<option id="com.ti.ccstudio.buildDefinitions.TMS470_5.2.linkerID.DISPLAY_ERROR_NUMBER.2003757546" name="Emit diagnostic identifier numbers (--display_error_number)" superClass="com.ti.ccstudio.buildDefinitions.TMS470_5.2.linkerID.DISPLAY_ERROR_NUMBER" value="true" valueType="boolean"/>
@@ -293,11 +293,13 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="Test_Debug/Source/watchdog_codes.c|experiment_orDbg_codes.c|Test_Debug/Source/test_modules.c|FXOS8700 Freescale Lib/mqx_tasks.c|appfile_magnmtr_old_logic.c|customer_demo1_collectAndTxitSensorData.c|Parse_Library/common/tests/simplejson_tests.cc|algorithm_1.c|Sensors/Source/fxos8700-112.c|algorithm2.c|Test_Debug/Source/rough_file.c|Image_Sensor/Source/camera_app_beforeCodeOrg.c|FXOS8700 Freescale Lib/user_tasks.c|FXOS8700 Frescale Lib/tasks_backup_8May.c|Test_Debug/Source/older_codes.c|Sensors/Source/test_fns.c|Application/Source/appfile_magnmtr_old_logic.c|get_weather.cmd|FXOS8700 Freescale Lib/fns_to_be_called_from_mainTask.c|FXOS8700 Frescale Lib/Events.c|FXOS8700 Freescale Lib/Events.c|Application/Source/collect_and_txit.c|Test_Debug/Source/codes_usedfor_debugging.c|FXOS8700 Freescale Lib/main.c|main1.c|demo1_collectAndTxitSensorData.c|FXOS8700 Frescale Lib/fns_to_be_called_from_mainTask.c|rough_file.c|main_getweather.c|Application/Source/algorithm_1.c|FXOS8700 Frescale Lib/user_tasks.c|FXOS8700 Frescale Lib/main.c|Application/Source/algorithm.c|FXOS8700 Frescale Lib/tasks_backup.c|algorithm.c|network_if.c|test_modules.c|Test_Debug/Source/experiment_orDbg_codes.c|Application/Source/algorithm2.c|Test_Task.c|FXOS8700 Frescale Lib/mqx_tasks.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="time_driverLevel_fn.c|Test_Debug/Source/watchdog_codes.c|experiment_orDbg_codes.c|Test_Debug/Source/test_modules.c|FXOS8700 Freescale Lib/mqx_tasks.c|appfile_magnmtr_old_logic.c|customer_demo1_collectAndTxitSensorData.c|Parse_Library/common/tests/simplejson_tests.cc|algorithm_1.c|Sensors/Source/fxos8700-112.c|algorithm2.c|Test_Debug/Source/rough_file.c|Image_Sensor/Source/camera_app_beforeCodeOrg.c|FXOS8700 Freescale Lib/user_tasks.c|FXOS8700 Frescale Lib/tasks_backup_8May.c|Test_Debug/Source/older_codes.c|Sensors/Source/test_fns.c|Application/Source/appfile_magnmtr_old_logic.c|get_weather.cmd|FXOS8700 Freescale Lib/fns_to_be_called_from_mainTask.c|FXOS8700 Frescale Lib/Events.c|FXOS8700 Freescale Lib/Events.c|Application/Source/collect_and_txit.c|Test_Debug/Source/codes_usedfor_debugging.c|FXOS8700 Freescale Lib/main.c|main1.c|demo1_collectAndTxitSensorData.c|FXOS8700 Frescale Lib/fns_to_be_called_from_mainTask.c|rough_file.c|main_getweather.c|Application/Source/algorithm_1.c|FXOS8700 Frescale Lib/user_tasks.c|FXOS8700 Frescale Lib/main.c|Application/Source/algorithm.c|FXOS8700 Frescale Lib/tasks_backup.c|algorithm.c|network_if.c|test_modules.c|Test_Debug/Source/experiment_orDbg_codes.c|Application/Source/algorithm2.c|Test_Task.c|FXOS8700 Frescale Lib/mqx_tasks.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
-			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
+			<storageModule moduleId="org.eclipse.cdt.core.externalSettings">
+				<externalSettings containerId="driverlib;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier"/>
+			</storageModule>
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
